<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/moti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.PreferencesFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_preferences"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="textStart"-->
<!--        android:textSize="34sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.047"-->
<!--        tools:text="Preferences" />-->
<!--    -->
    <TextView
        android:id="@+id/reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextViewEdits" />

    <EditText
        android:id="@+id/text_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder"
        android:text="16:00" />

    <CheckBox
        android:id="@+id/checkBox_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/checkBox_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_monday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/checkBox_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_tuesday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/checkBox_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_wednesday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/checkBox_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_thursday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/checkBox_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_friday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/saturday" />

    <CheckBox
        android:id="@+id/checkBox_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkBox_saturday"
        app:layout_constraintTop_toBottomOf="@+id/text_reminder"
        android:text="@string/sunday" />


    <Button
        android:id="@+id/button_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_reminders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_sunday" />


    <TextView
        android:id="@+id/text_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reminder" />

    <ImageButton
        android:id="@+id/imageButton_gb"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/english"
        android:cropToPadding="false"
        android:src="@drawable/united_kingdom_flag_icon"
        app:layout_constraintEnd_toStartOf="@+id/imageButton_pl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_language" />

    <ImageButton
        android:id="@+id/imageButton_pl"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/polish"
        android:cropToPadding="false"
        android:src="@drawable/poland_flag_icon"
        app:layout_constraintStart_toEndOf="@+id/imageButton_gb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_language" />


    <TextView
        android:id="@+id/text_motive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_pl"
        android:text="@string/theme" />

    <RadioGroup
        android:id="@+id/radioGroup_motive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_motive">

        <RadioButton
            android:id="@+id/radioButton_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButton_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />
    </RadioGroup>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2965614181564887/6715373899"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
