<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meditation.MeditationPreferencesFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar_meditation_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="58"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_meditation_length_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_minute" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/half_time_audio_notification"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_half_time_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/background_sound"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_background_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/background_sounds" />


            <Button
                android:id="@+id/btn_start_meditation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/start_meditation" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>