<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_meditation">

    <fragment
        android:id="@+id/navigation_meditation"
        android:name="zen.zone.ui.meditation.MeditationPreferencesFragment"
        android:label="@string/title_meditation"
        tools:layout="@layout/fragment_meditation_preferences" >
        <action
            android:id="@+id/action_meditationFragment_to_timerFragment"
            app:destination="@id/timerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="zen.zone.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="zen.zone.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />

    <fragment
        android:id="@+id/timerFragment"
        android:name="zen.zone.ui.meditation.MeditationTimerFragment"
        android:label="@string/title_meditation"
        tools:layout="@layout/fragment_meditation_timer" />

</navigation>