<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsFragment">

    <Space
        android:id="@+id/spaceTOP"
        android:layout_width="25dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.utils.widget.MotionLabel
        android:id="@+id/currentStreakLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_streak"
        android:textStyle="bold"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceTOP" />

    <TextView
        android:id="@+id/tv_currentStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentStreakLbl" />

    <Space
        android:id="@+id/spaceMID"
        android:layout_width="20dp"
        android:layout_height="35dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentStreak"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.utils.widget.MotionLabel
        android:id="@+id/longestStreakLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceMID"
        android:text="@string/longest_streak"
        />

    <TextView
        android:id="@+id/tv_longestStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longestStreakLbl" />

    <Space
        android:id="@+id/spaceBOT"
        android:layout_width="25dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_longestStreak"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_sendStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceBOT" />


</androidx.constraintlayout.widget.ConstraintLayout>